# cmd/api/router/groups/products.go
@@ -20,6 +20,6 @@ func NewProductsGroup(handlerProducts handler.Products) ProductsGroup {
 
 func (r *productsGroup) Resource(g *echo.Group) {
 	g.POST("/products", r.handlerProducts.RegisterProducts)
-	g.GET("/products/category/:category", r.handlerProducts.GetProductsByCategory)
+	g.GET("/products/category", r.handlerProducts.GetProductsByCategory)
 	g.GET("/products/adiciones", r.handlerProducts.GetAdicionesGyCategory)
 }
