# docs/swagger.yaml
@@ -105,14 +105,14 @@ paths:
       summary: Se obtienen las adiciones por categoría.
       tags:
       - Products
-  /products/category/{category}:
+  /products/category:
     get:
       description: Se obtiene una lista de productos filtradas por el nombre de una
         categoria, tambien puede ser una similitud, ej:Si se busca la palabra hamb,
         obtendrá hamburguesas o otra categoría similar.
       parameters:
-      - description: Este es el nombre de la categoria ej:/products/category/hamburguesas
-        in: path
+      - description: Este es el nombre de la categoria ej:/products/category/?category=hamburguesas
+        in: query
         name: category
         required: true
         type: string
@@ -125,10 +125,19 @@ paths:
             items:
               $ref: '#/definitions/models.Items'
             type: array
+        "400":
+          description: Se retorna cuando cuando el valor es vacio o el valor es menor
+            a 3 digitos.
+          schema:
+            type: string
         "404":
-          description: Not Found
+          description: Se retorna cuando no se encuentra una concidencia en la busqueda.
+          schema:
+            type: string
         "500":
-          description: Internal Server Error
+          description: Se retorna cuando ocurre un error inexperado en el servidor.
+          schema:
+            type: string
       summary: Se obtienen todos los productos de una misma categoria.
       tags:
       - Products
